--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-localforage-adapter": "2.1.1",
+    "ember-sortable": "1.6.2",
+    "ember-spectrum-color-picker": "0.3.0"
   }
 }
